Fixes vertical alignment of a few pages

--- a/ci/web/front/src/content/createAccount/createAccount.less
+++ b/ci/web/front/src/content/createAccount/createAccount.less
@@ -1,8 +1,9 @@
 div.createAccount {
+	display: table-cell;
+	vertical-align: middle;
 	font-size: 1.0em;
 
 	.createAccountFormContainer {
-		margin-top: 15%;
 		margin-left: auto;
 		margin-right: auto;
 		padding: 30px 40px 20px 40px;
