--- a/ci/web/front/src/content/recoverPassword/recoverPassword.less
+++ b/ci/web/front/src/content/recoverPassword/recoverPassword.less
@@ -1,8 +1,9 @@
 div.recoverPassword {
+	display: table-cell;
+	vertical-align: middle;
 	font-size: 1.0em;
 
 	.recoverPasswordFormContainer {
-		margin-top: 15%;
 		margin-left: auto;
 		margin-right: auto;
 		padding: 30px 40px 20px 40px;
